# c-programming-examples

./: .gitignore  README.md  ex-compile  ex-compile.c  single-linked-list-compile  single-linked-list.c
dangling_pointers/: dangling-pointer-examples.c
function_pointers/: cubed.c
glib/: CMakeLists.txt  README.md
glib/LibProject/include/: ex-compile.h
glib/LibProject/src/: CMakeLists.txt  ex-compile.c
glib/MainProject/src/: CMakeLists.txt
glib/include/: single-linked-list.h
glib/src/: main.c  single-linked-list.c
libcurl_example/: README.md  elastic_search_client_play.c  makefile
libcurl_example_callback/: CMakeLists.txt  README.md  docker-compose.yml  elastic_search_client_play.c  example_get.c  example_get.h  example_put.c  example_put.h  makefile  record.h  request_callback.c  request_callback.h  response_callback.c  response_callback.h
libcurl_example_callback/inc/: example_get.h  example_put.h  record.h
libcurl_example_callback/src/: elastic_search_client_play.c  example_get.c  example_put.c  request_callback.c  response_callback.c
pointers_with_functions/: example_runner.c  helpers.c  helpers.h  makefile  return_pointers.c  return_pointers.h  swap.c  swap.h
programming-pearls/chapter-1/: bitwise-sort.c  sorting.c
weak_references/: bar.c  foo.c
